# micro-rabbitmq

./: Makefile  README.md  docker-compose.yml  pyproject.toml
diagrams/: c2.puml  outbox_processor.puml  with_outbox_pattern.puml  without_outbox_pattern.puml
docker/: Dockerfile
examples/: creating_custom_span.py  manual_context_propagation.py  protobuf_json_serde.py
mqlib/: __init__.py  testing.py
orders/: api.py  db.py  models.py  outbox.py  outbox_processor.py  queues.py  test_contract.py  tracing.py
registry/: README.md  order_placed_event.proto  order_placed_event_pb2.py  order_placed_event_pb2.pyi  order_placed_pydantic.py
shipping/: api.py  test_shipping.py  tracing.py
warehouse/: consumer.py  db.py  legacy.py  tracing.py
